--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="overlay">
       <div class="title">
         <h1><strong> Aman Chauhan  </strong></h1>
-        <h3 id="qualif"><strong> UI/UX Desginer </strong></h3>
+        <h3 id="qualif"><strong> UI/UX Designer </strong></h3>
       </div>
       <div class="row text-center">
         <div class="border contact"><a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRtsnZQrCTSCszMsDcdkhZwKRMJjFpqLlnsxssWVcmgzrrtjzCTfxGSVHHvnvZKjPVDNzqB"><h2 style="color: white;" id="borderText"><strong> CONTACT </strong></a></h2></div>
